--- a/COMP2084Lab1/Views/Shared/_Layout.cshtml
+++ b/COMP2084Lab1/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - COMP2084Lab1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p>Name: Yakshi Gandhi
+                Student Number: 200482015
+            </p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
